# llama-remote-control

./: .gitignore  README.md  deploy.ps1  pyproject.toml
src/llama_remote_control/: __init__.py  __main__.py  cli.py  config.py  monitor.py  setup.py  ssh.py  theme.py  tunnel.py  vastai.py
