[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-remote-control"
version = "0.1.0"
description = "Interactive CLI for managing llama.cpp on Vast.ai GPU instances"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "paramiko>=3.0",
    "httpx>=0.27",
    "questionary>=2.0",
    "alive-progress>=3.1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[project.scripts]
llama = "llama_remote_control.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
